crates/decorous-backend/src/dom_render/snapshots/decorous_backend__dom_render__tests__dirty_items_from_reactive_css_are_merged_into_one.snap
---
source: crates/decorous-backend/src/dom_render/mod.rs
expression: "String::from_utf8(out).unwrap()"
---
function __init_ctx() {
let color = "red";
let bg = "green"
let __closure2 = () => { __schedule_update(0, color = 1); __schedule_update(1, bg = 3); };
return [color,bg,__closure2];
}
const dirty = new Uint8Array(new ArrayBuffer(1));
function create_main_block(target, anchor) {
function mount(target, newNode, anchor) {
target.insertBefore(newNode, anchor || null);
}
const e0 = document.createElement("button");
e0.textContent = "Click";
e0.addEventListener("click", ctx[2])
mount(target, e0, anchor);
target.setAttribute("style", `--decor-0: ${ctx[0]}; --decor-1: ${ctx[1]}; `);
return {
u(dirty) {
if (dirty[0] & 3) target.setAttribute("style", `--decor-0: ${ctx[0]}; --decor-1: ${ctx[1]}; `);
},
d() {
e0.parentNode.removeChild(e0);
}
};
}
const ctx = __init_ctx();
const fragment = create_main_block(document.getElementById("test"));
let updating = false;
function __schedule_update(ctx_idx, val) {
ctx[ctx_idx] = val;
dirty[Math.max(Math.ceil(ctx_idx / 8) - 1, 0)] |= 1 << (ctx_idx % 8);
if (updating) return;
updating = true;
Promise.resolve().then(() => {
fragment.u(dirty);
updating = false;
dirty.fill(0);
});
}

